# hclib-legacy

./: INSTALL  INSTALL.crt  INSTALL.ocr  Makefile.am  README  _config.yml  community.md  configure.ac  documentation.md  download.md  getting-started.md  index-org.html  index.html  index.md  install.sh  installation.md  params.json  tutorial.md
_layouts/: hclib.html
css/: bootstrap.css
doc/html/: LICENSE_source.html  accumulator-hand-coded_8c_source.html  accumulator_8c_source.html  accumulator_8h_source.html  allocator-all_8h_source.html  annotated.html  classes.html  comp-platform-all_8h_source.html  comp-target-all_8h_source.html  compat_8h_source.html  datablock-all_8h_source.html  ddf_8c_source.html  ddf_8h_source.html  debug_8h_source.html  deque_8c_source.html  deque_8h_source.html  dictionary_8c.html  dictionary_8c__incl.map  dictionary_8c__incl.md5  dictionary_8c_source.html  dictionary_8h.html  dictionary_8h__dep__incl.map  dictionary_8h__dep__incl.md5  dictionary_8h__incl.map  dictionary_8h__incl.md5  dictionary_8h_source.html  dir_000009_000006.html  dir_000035_000006.html  dir_02bac4b930cc2cb9e8e4b1c967c9a9d1.html  dir_02bac4b930cc2cb9e8e4b1c967c9a9d1_dep.map  dir_02bac4b930cc2cb9e8e4b1c967c9a9d1_dep.md5  dir_06b34cfbe8a14c68c7ec3ef82b9d8768.html  dir_06b34cfbe8a14c68c7ec3ef82b9d8768_dep.map  dir_06b34cfbe8a14c68c7ec3ef82b9d8768_dep.md5  dir_072a1c1e0e7cdd8c568d624b79fe99ab.html  dir_072a1c1e0e7cdd8c568d624b79fe99ab_dep.map  dir_072a1c1e0e7cdd8c568d624b79fe99ab_dep.md5  dir_1b4a88823a623a4a40690b3224156b8d.html  dir_1b4a88823a623a4a40690b3224156b8d_dep.map  dir_1b4a88823a623a4a40690b3224156b8d_dep.md5  (+481 more)
doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_74.js  all_78.js  classes_61.js  classes_64.js  classes_66.js  classes_68.js  classes_6c.js  classes_6d.js  classes_70.js  classes_72.js  defines_64.js  defines_6d.js  enums_61.js  enums_6c.js  enums_6f.js  enumvalues_64.js  enumvalues_6f.js  files_64.js  files_69.js  functions_61.js  functions_63.js  functions_64.js  functions_66.js  functions_68.js  functions_69.js  functions_6e.js  functions_6f.js  (+33 more)
doc/latex/: annotated.tex  dir_62caf482c70b298e36c9433397fcdc40.tex  dir_62caf482c70b298e36c9433397fcdc40_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6bc6ad22483805bbbda55258ad2a62ea.tex  dir_bfccd401955b95cf8c75461437045ac0.tex  dir_bfccd401955b95cf8c75461437045ac0_dep.md5  doxygen.sty  group__Accumulators.tex  group__DDF.tex  group__HClib.tex  group__Phasers.tex  modules.tex  refman.tex  structaccum__double__lazy__t.tex  structaccum__double__t.tex  structaccum__float__lazy__t.tex  structaccum__float__t.tex  structaccum__impl__t.tex  structaccum__int__lazy__t.tex  structaccum__int__t.tex  structaccum__long__lazy__t.tex  structaccum__long__t.tex  structaccum__short__lazy__t.tex  structaccum__short__t.tex  structaccum__t.tex  structaccumed__t.tex  structasync__t.tex  structasync__task__t.tex  structddf__t.tex  structddt__t.tex  structfinish__t.tex  structforasync1D__t.tex  structforasync1D__task__t.tex  structforasync2D__t.tex  structforasync2D__task__t.tex  structforasync3D__t.tex  structforasync3D__task__t.tex  structforasync__t.tex  (+5 more)
inc/: accumulator.h  ddf.h  hclib-rtii.h  hclib.h  phased.h
scripts/ocr/: build-ocr.sh
src/: Makefile.am  accumulator.c  ddf.c  forasync.c  hclib.c  options.c  options.h  runtime-callback.c  runtime-hclib.c
src/crt/: Makefile.inc  deque.c  deque.h  hc-sysdep.h  runtime-crt.c  runtime-crt.h  runtime-support-crt.c
src/inc/: hc_sysdep.h  rt-accumulator.h  rt-ddf.h  rt-hclib-def.h  runtime-callback.h  runtime-hclib.h  runtime-support.h
src/ocr/: Makefile.inc  hashtable.c  hashtable.h  runtime-ocr.c
tests/: async0.c  async1.c  boot0.c  finish0.c  finish1.c  runTests
tests/ddf/: asyncAwait0.c
tests/non-regression/: async0.c  async1.c  finish0.c  finish1.c  finish2.c  forasync1DCh.c  forasync1DRec.c  forasync2DCh.c  forasync2DRec.c  forasync3DCh.c  forasync3DRec.c
tests/non-regression/accumulator/: accum0.c  accum1.c  accum_rec0.c
tests/non-regression/ddf/: asyncAwait0.c  asyncAwait1.c
tests/performance/: runPerfs
tests/performance/throughput/: alloc_async0.c  alloc_ddt0.c
